ファイル設定

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ _notes/
 .idea/*
 !.idea/codeStyles/
 !.idea/codeStyles/codeStyleConfig.xml
-!.idea/codeStyles/Project.xml
+#!.idea/codeStyles/Project.xml
 
 npm-debug.log
 
