--- a/src/redirects/medium/.htaccess
+++ b/src/redirects/medium/.htaccess
@@ -1,10 +1,10 @@
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /media
-RewriteRule ^media/index\.html$ - [L]
+RewriteBase /medium
+RewriteRule ^medium/index\.html$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /media/index.html [L]
+RewriteRule . /medium/index.html [L]
 </IfModule>
 
 
