--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-data": "^1.3.1",
     "gulp-debug": "^4.0.0",
+    "gulp-exec": "^4.0.0",
     "gulp-gzip": "^1.4.2",
     "gulp-imagemin": "^6.1.0",
     "gulp-inject": "^5.0.4",
