--- a/package.json
+++ b/package.json
@@ -4,36 +4,42 @@
   "description": "",
   "main": "",
   "devDependencies": {
-    "@types/autoprefixer": "^9.6.1",
-    "@types/gulp": "^4.0.6",
-    "@types/gulp-load-plugins": "0.0.31",
-    "@types/gulp-util": "^3.0.34",
-    "@types/jasmine": "^3.4.0",
-    "@types/jasmine-jquery": "^1.5.33",
-    "@types/node": "^12.7.2",
-    "@types/rimraf": "^2.0.2",
-    "@types/through2": "^2.0.34",
-    "@types/webpack": "^4.39.1",
-    "@types/webpack-stream": "^3.2.10",
-    "autoprefixer": "^9.6.1",
+    "@prettier/plugin-pug": "^1.10.1",
+    "@types/autoprefixer": "^9.7.2",
+    "@types/browser-sync": "^2.26.1",
+    "@types/gulp": "^4.0.7",
+    "@types/gulp-load-plugins": "0.0.32",
+    "@types/gulp-util": "^3.0.35",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.7",
+    "@types/rimraf": "^3.0.0",
+    "@types/through2": "^2.0.36",
+    "@types/webpack": "^4.41.25",
+    "@types/webpack-stream": "^3.2.11",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
+    "autoprefixer": "^10.0.2",
+    "browser-sync": "^2.26.13",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "gulp": "^4.0.2",
     "gulp-cached": "^1.1.1",
     "gulp-concat": "^2.6.1",
     "gulp-data": "^1.3.1",
     "gulp-debug": "^4.0.0",
-    "gulp-exec": "^4.0.0",
     "gulp-gzip": "^1.4.2",
-    "gulp-imagemin": "^6.1.0",
-    "gulp-inject": "^5.0.4",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-inject": "^5.0.5",
     "gulp-less": "^4.0.1",
-    "gulp-livereload": "^4.0.1",
-    "gulp-load-plugins": "^2.0.1",
+    "gulp-livereload": "^4.0.2",
+    "gulp-load-plugins": "^2.0.5",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
     "gulp-pug": "^4.0.1",
-    "gulp-rename": "^1.4.0",
+    "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
-    "gulp-sourcemaps": "^2.6.5",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-tslint": "^8.1.4",
     "gulp-typescript": "^5.0.1",
     "gulp-uglify": "^3.0.2",
@@ -41,27 +47,25 @@
     "gulp-util": "^3.0.8",
     "gulp-watch": "^5.0.1",
     "imagelogic-tools": "^0.2.41",
-    "imagemin-jpegtran": "^6.0.0",
-    "imagemin-mozjpeg": "^8.0.0",
-    "imagemin-pngquant": "^8.0.0",
-    "jasmine": "^3.4.0",
-    "jasmine-jquery": "^2.1.1",
-    "jquery": "^3.4.1",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-pngquant": "^9.0.1",
+    "jest": "^26.6.3",
     "less-plugin-autoprefix": "^2.0.0",
-    "open": "^6.4.0",
-    "rimraf": "^3.0.0",
-    "through2": "^3.0.1",
-    "ts-loader": "^6.0.4",
-    "ts-node": "^8.3.0",
-    "tslint": "^5.19.0",
-    "tslint-stylish": "^2.1.0",
-    "typescript": "^3.5.3",
-    "wallaby-webpack": "^3.9.15",
-    "webpack": "^4.39.2",
+    "open": "^7.3.0",
+    "prettier": "^2.1.2",
+    "rimraf": "^3.0.2",
+    "through2": "^4.0.2",
+    "ts-jest": "^26.4.4",
+    "ts-loader": "^8.0.11",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5",
+    "wallaby-webpack": "^3.9.16",
+    "webpack": "^4.0.5",
     "webpack-stream": "^5.2.1"
   },
   "scripts": {
-    "test": "gulp test",
+    "test": "jest",
     "watch.wp": "gulp watch.wp",
     "watch.static": "gulp watch.dev",
     "gulp.dev": "gulp watch.gulp"
@@ -69,7 +73,7 @@
   "author": "Satoshi Onoda",
   "private": true,
   "dependencies": {
-    "animejs": "^3.1.0",
-    "rxjs": "^6.5.4"
+    "animejs": "^3.2.1",
+    "rxjs": "^6.6.6"
   }
 }
