--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@prettier/plugin-pug": "^1.10.1",
     "@types/autoprefixer": "^9.7.2",
     "@types/browser-sync": "^2.26.1",
+    "@types/connect-history-api-fallback": "^1.3.3",
     "@types/gulp": "^4.0.7",
     "@types/gulp-load-plugins": "0.0.32",
     "@types/gulp-util": "^3.0.35",
@@ -20,6 +21,7 @@
     "@typescript-eslint/parser": "^4.7.0",
     "autoprefixer": "^10.0.2",
     "browser-sync": "^2.26.13",
+    "connect-history-api-fallback": "^1.6.0",
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
