--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/gulp-util": "^3.0.35",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.7",
+    "@types/pluralize": "0.0.29",
     "@types/rimraf": "^3.0.0",
     "@types/through2": "^2.0.36",
     "@types/webpack": "^4.41.25",
@@ -76,6 +77,7 @@
   "private": true,
   "dependencies": {
     "animejs": "^3.2.1",
+    "pluralize": "^8.0.0",
     "rxjs": "^6.6.6"
   }
 }
