--- a/package.json
+++ b/package.json
@@ -4,79 +4,51 @@
   "description": "",
   "main": "",
   "devDependencies": {
-    "@prettier/plugin-pug": "^1.10.1",
-    "@types/autoprefixer": "^9.7.2",
-    "@types/browser-sync": "^2.26.1",
-    "@types/connect-history-api-fallback": "^1.3.3",
-    "@types/gulp": "^4.0.7",
-    "@types/gulp-load-plugins": "0.0.32",
-    "@types/gulp-util": "^3.0.35",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.7",
-    "@types/pluralize": "0.0.29",
-    "@types/rimraf": "^3.0.0",
-    "@types/through2": "^2.0.36",
-    "@types/webpack": "^4.41.25",
-    "@types/webpack-stream": "^3.2.11",
-    "@typescript-eslint/eslint-plugin": "^4.7.0",
-    "@typescript-eslint/parser": "^4.7.0",
-    "autoprefixer": "^10.0.2",
-    "browser-sync": "^2.26.13",
-    "connect-history-api-fallback": "^1.6.0",
-    "eslint": "^7.13.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "gulp": "^4.0.2",
-    "gulp-cached": "^1.1.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-data": "^1.3.1",
-    "gulp-debug": "^4.0.0",
-    "gulp-gzip": "^1.4.2",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-inject": "^5.0.5",
-    "gulp-less": "^4.0.1",
-    "gulp-livereload": "^4.0.2",
-    "gulp-load-plugins": "^2.0.5",
-    "gulp-notify": "^3.2.0",
-    "gulp-plumber": "^1.2.1",
-    "gulp-pug": "^4.0.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-replace": "^1.0.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-tslint": "^8.1.4",
-    "gulp-typescript": "^5.0.1",
-    "gulp-uglify": "^3.0.2",
-    "gulp-using": "^0.1.1",
-    "gulp-util": "^3.0.8",
-    "gulp-watch": "^5.0.1",
-    "imagelogic-tools": "^0.2.41",
-    "imagemin-jpegtran": "^7.0.0",
-    "imagemin-mozjpeg": "^9.0.0",
-    "imagemin-pngquant": "^9.0.1",
-    "jest": "^26.6.3",
-    "less-plugin-autoprefix": "^2.0.0",
-    "open": "^7.3.0",
-    "prettier": "^2.1.2",
-    "rimraf": "^3.0.2",
-    "through2": "^4.0.2",
-    "ts-jest": "^26.4.4",
-    "ts-loader": "^8.0.11",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.5",
-    "wallaby-webpack": "^3.9.16",
-    "webpack": "^4.0.5",
-    "webpack-stream": "^5.2.1"
+    "@prettier/plugin-pug": "^2.0.0",
+    "@squoosh/lib": "^0.4.0",
+    "@types/browser-sync-webpack-plugin": "^2.2.2",
+    "@types/jest": "^27.5.1",
+    "@types/pluralize": "^0.0.29",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "ansis": "^1.3.6",
+    "browser-sync": "^2.27.10",
+    "browser-sync-webpack-plugin": "^2.3.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.1",
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "image-minimizer-webpack-plugin": "^3.2.3",
+    "jest": "^28.1.0",
+    "less": "^4.1.2",
+    "less-loader": "^11.0.0",
+    "prettier": "^2.6.2",
+    "pug-plugin": "^2.5.1",
+    "sass": "^1.52.1",
+    "sass-loader": "^13.0.0",
+    "terser-webpack-plugin": "^5.3.1",
+    "ts-jest": "^28.0.3",
+    "ts-loader": "^9.3.0",
+    "ts-node": "^10.8.0",
+    "typescript": "^4.7.2",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0",
+    "webpackbar": "^5.0.2"
   },
   "scripts": {
-    "test": "jest",
-    "watch.wp": "gulp watch.wp",
-    "watch.static": "gulp watch.dev",
-    "gulp.dev": "gulp watch.gulp"
+    "webpack": "MODE=development npx webpack",
+    "serve": "MODE=development SERVER=browserSync npx webpack",
+    "serve-hot": "MODE=development SERVER=webpack npx webpack serve",
+    "build": "npx webpack"
   },
   "author": "Satoshi Onoda",
   "private": true,
   "dependencies": {
     "animejs": "^3.2.1",
+    "imagelogic-tools": "^0.2.10",
     "pluralize": "^8.0.0",
     "rxjs": "^6.6.6"
   }
